--- a/Milestone_01.ipynb
+++ b/Milestone_01.ipynb
@@ -1434,30 +1434,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 3.B: Drop **features** with \"too many\" null values\n",
+    "Columns dropped: 'parcelid', 'latitude', 'longitude', 'rawcensustractandblock', 'censustractandblock', 'regionidzip', 'regionidcity', 'regionidcounty', 'assessmentyear'\n",
     "\n",
-    "Your code in the next cell(s). Make a judgement call about what \"too many\" means and briefly describe your reasoning in the discussion.   \n",
-    "\n",
-    "Note: \"Too many\" may depend on what the non-null values look like, be sure to investigate carefully. "
+    "Parcelid is a column that serves as a unique identifier, therefore it's not relevenat for predicetive analysis or regression. Latitude and longitude ended up dropped as they serve as geographic coordinates; while that might sound useful, that also contains too many unique values that it would not be helpful. Columns rawcensustractandblock and censustractandblock aren't relevant in regression either, as they also contain too many unique values. Regionidzip, regionidcity and regionidcounty are columns are it states its unqiue region zip/city/county, also containing too many unique values. Assessmentyear isn't releveant either, since the value changes in each row are too minimal."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some features are missing in almost the entire dataset, which makes them hard to use in a general model. For example, features like buildingclasstypeid, finishedsquarefeet13, and basementsqft are over 99 percent missing, so they probably do not add much unless we are doing something very specific. Other features like fireplaceflag or decktypeid might still be useful, but only in certain cases like when the home actually has a fireplace or a deck. These feel more like add-on details that could help refine a Zestimate after the core features are already considered. So while they are not completely useless, the fact that they are missing for most properties makes them less useful for a model that needs to work broadly across the dataset."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "garagecarcnt                    67.24\n",
-    "garagetotalsqft                 67.24\n",
-    "regionidneighborhood            60.69\n",
-    "propertyzoningdesc              34.82"
+    "### Part 3.B: Drop **features** with \"too many\" null values\n",
+    "\n",
+    "Your code in the next cell(s). Make a judgement call about what \"too many\" means and briefly describe your reasoning in the discussion.   \n",
+    "\n",
+    "Note: \"Too many\" may depend on what the non-null values look like, be sure to investigate carefully. "
    ]
   },
   {
@@ -1710,6 +1700,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Many features have been removed from the dataset. Examined in Part 1, we looked at the percentage of missing values in each columns. A large amount of columns hold above 90% of missing values. For a dataset the contains over 77,000 rows, too many missing values make it difficult to use in a general model. As stated in Part 1, features like buildingclasstypeid, finishedsquarefeet13, and basementsqft are over 99 percent missing, practically the entire dataset. They do not hold much use, as goes for the rest of the feautres that hold a high percentage of missing values. After removing these features, we examined the percentage of missing values again, which show a much less percentage.\n",
+    "\n",
+    "Features removed: 'buildingclasstypeid', 'finishedsquarefeet13','finishedsquarefeet15' 'finishedsquarefeet50','basementsqft', 'storytypeid', 'yardbuildingsqft26','yardbuildingsqft17','pooltypeid10','pooltypeid2','poolsizesum','fireplaceflag', 'architecturalstyletypeid', 'typeconstructiontypeid','finishedsquarefeet6','decktypeid','hashottuborspa',\n",
+    "'taxdelinquencyyear', 'taxdelinquencyflag','finishedfloor1squarefeet',\n",
+    "'fireplacecnt', 'threequarterbathnbr','poolcnt','pooltypeid7','airconditioningtypeid',\n",
+    "'numberofstories', 'garagecarcnt','garagetotalsqft','regionidneighborhood',\n",
+    "'propertyzoningdesc'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Part 3.C: Drop Problematic **samples** \n",
     "\n",
     "There could be several reasons why you might want to drop a sample:\n",
@@ -1763,6 +1766,13 @@
    },
    "source": [
     "#### **3.C Discussion:** In a short paragraph, explain your decision about which samples were dropped\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Essentially what was done was detected outliers of the target (taxvaluedollarcnt) using the IQR method. Using the IDR method ranging from the 25th percentile to the 75th percentile of the data, it keeps the middle 50% of the data. Since this column is skewed, it helps with this distribution. After applying the method, it removed roughly 5000 rows of the data, lowering the shape from about 77,000 rows to 72,000 rows."
    ]
   },
   {
@@ -2081,6 +2091,13 @@
    "metadata": {},
    "source": [
     "#### **3.D Discussion:**  Describe in a paragraph your decisions about which methods you used to impute missing values in the dataset\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A few imputation methods were used, not too many: for the column 'buildingqualitytypeid' and 'lotsizesquarefeet', the missing values were essentially filled with the median of those columns. Buildingqualitytypeid is a subjective score, if using the mean could possibly be skewed with outliers, therefore it was safer to use the median to fill them in.Lotsizesquarefeet is a continous column, and the lot size can vary which can be skewed, therefore median is a better option. Unitcnt was filled with 1 since based on the data, it is a residential area so the unit count is most likely 1, which is a good option to fill the missing values. Heatingorsystemtypeid was filled with -1 since it marks as unknown. It is a categorical ID, where 1 = central and 2 = floor heater. With the value missing, -1 serves as a placeholder for unknown. "
    ]
   },
   {
